Reposition download button to ensure visibility

--- a/www/main.css
+++ b/www/main.css
@@ -54,7 +54,7 @@ li > a > span {
   .btn-download {
     position: absolute;
     top: 75px;
-    right: 55px;
+    right: 75px;
     z-index: 1;
   }
 }
